@@ -19,6 +19,7 @@ gemfile:
   - gemfiles/mongoid_30.gemfile
   - gemfiles/mongoid_31.gemfile
   - gemfiles/mongoid_40.gemfile
+  - gemfiles/mongoid_50.gemfile
   - gemfiles/sinatra_14.gemfile
 
 sudo: false
