@@ -1,8 +1,13 @@
 source 'https://rubygems.org'
 
 gem 'railties', '~> 4.0'
-gem 'mongoid', '~> 4.0.0'
+gem 'mongoid', '~> 5.0.0'
 gem 'rspec-rails', '~> 2.14.1'
+
+group :development, :test do
+  # see https://github.com/DatabaseCleaner/database_cleaner/issues/390, upgrade to 1.5.1 when released
+  gem 'database_cleaner', github: 'DatabaseCleaner/database_cleaner'
+end
 
 platforms :mri do
   gem 'test-unit' if RUBY_VERSION > '2.1.0'
